# agentic_ai

./: L1_NER_Streamlit.ipynb  L1_NER_Streamlit.py  L2_DataAssistant.ipynb  L3_DataAssistant.ipynb  README.md  customer_review.csv  customer_reviews.db  customer_reviews_1000.csv  customers_1000.csv  processed_reviews.txt  result.csv  steps.md
dataassistant/: README.md  pyproject.toml  report.md  research_papers.db
dataassistant/src/dataassistant/: crew.py  main.py
dataassistant/src/dataassistant/config/: data_agents.yaml  data_tasks.yaml
