[project]
name = "dataassistant"
version = "0.1.0"
description = "DataAssistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
dataassistant = "dataassistant.main:run"
run_crew = "dataassistant.main:run"
train = "dataassistant.main:train"
replay = "dataassistant.main:replay"
test = "dataassistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
